2005-06-10  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/empty-aligned.t: Adjust alignment expressions so
	that no .text? section is kept.  Also check setting vma and
	lma.
	* ld-scripts/empty-aligned.d: Update.

2005-06-09  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/empty-aligned.d: Adjust.

2005-06-05  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-cris/hiddef1.d: Undo the last change.
	* ld-cris/libdso-10.d: Likewise.
	* ld-cris/libdso-2.d: Likewise.

2005-06-04  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-cris/hiddef1.d: Updated.
	* ld-cris/libdso-10.d: Likewise.
	* ld-cris/libdso-2.d: Likewise.

2005-06-02  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/powerpc.exp (ppcelftests): Assemble sda test with -a32.

2005-05-31  Zack Weinberg  <zack@codesourcery.com>

	* ld-scripts/align.exp: Mark align1 XFAIL on PECOFF targets.
	* ld-scripts/data.exp: Mark data UNSUPPORTED on a.out targets.
	* ld-scripts/provide.exp, ld-scripts/size.exp: Mark all tests
	UNSUPPORTED on a.out targets.  Tidy.

2005-05-27  Mark Mitchell  <mark@codesourcery.com>

	* config/default.exp (CC): Use find_gcc.
	(CFLAGS): Define, if no definition has been provided by the user.
	(CXX): Likewise.
	(CXXFLAGS): Likewise.

2005-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-mmix/bpo-6.d: Updated.
	* ld-mmix/bpo-19.d: Likewise.

2005-05-22  Richard Henderson  <rth@redhat.com>

	* ld-elfweak/dsow.dsym: Adjust for non-zero ST_OTHER.
	* ld-elfweak/weak.dsym: Likewise.

	* ld-selective/selective.exp: Don't test alpha.

2005-05-20  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-powerpc/sdalib.s, ld-powerpc/sdadyn.s, ld-powerpc/sdadyn.d: New
	files.
	* ld-powerpc/powerpc.exp: Run the new test.

2005-05-20  Bob Wilson  <bob.wilson@acm.org>

	* ld-undefined/undefined.exp: Revert xfail for xtensa-*-*.

2005-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR 797
	* empty-aligned.d: New file.
	* empty-aligned.exp: Likewise.
	* empty-aligned.s: Likewise.
	* empty-aligned.t: Likewise.
